[gd_scene format=3 uid="uid://dgot1dl00bpp1"]

[ext_resource type="Script" uid="uid://iycuj6pt1sso" path="res://scripts/menu_state.gd" id="1_bhutk"]
[ext_resource type="FontFile" uid="uid://mjsvug80he8r" path="res://assets/fonts/PixelOperator8.ttf" id="1_lvak4"]

[node name="Menu" type="Control" unique_id=760012381]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_bhutk")

[node name="ColorRect" type="ColorRect" parent="." unique_id=793524098]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.7607843, 0.7647059, 0.78039217, 1)

[node name="CenterContainer" type="CenterContainer" parent="." unique_id=62492174]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="Menu" type="VBoxContainer" parent="CenterContainer" unique_id=1344469220]
layout_mode = 2

[node name="Play" type="Button" parent="CenterContainer/Menu" unique_id=838416356]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "Play"

[node name="Controls" type="Button" parent="CenterContainer/Menu" unique_id=1051697039]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "Controls"

[node name="Credits" type="Button" parent="CenterContainer/Menu" unique_id=701668071]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "Credits"

[node name="Quit" type="Button" parent="CenterContainer/Menu" unique_id=1371161265]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "Quit"

[node name="Panel" type="Panel" parent="CenterContainer" unique_id=1354836516]
visible = false
layout_mode = 2

[node name="Controls" type="Label" parent="CenterContainer/Panel" unique_id=1684081406]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -81.0
offset_top = -11.5
offset_right = 81.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "WASD to move"

[node name="Back" type="Button" parent="CenterContainer/Panel" unique_id=783101402]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.5
offset_top = 97.0
offset_right = 22.5
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_lvak4")
text = "Back"

[connection signal="pressed" from="CenterContainer/Menu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CenterContainer/Menu/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/Back" to="." method="_on_back_pressed"]
